# webcam-demo

./: pyproject.toml
api/: .gitignore
api/src/webcam_demo/: __init__.py  bigwhite.py  db.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
src/webcam_demo/: __init__.py  bigwhite.py  main.py
