[project]
name = "webcam-demo"
version = "0.1.0"
description = "Toy image processing application built as a learning exercise and live demo. Interested in hiring me?: andrew at acameron dot org"
readme = "README.md"
authors = [
    { name = "Andrew Cameron", email = "andrew@acameron.org" }
]
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "requests>=2.32.5",
]

[project.scripts]
webcam-demo = "webcam_demo:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
]
